sort.basic.comb.AlgCombSort11.scala.error
Erreur de compilation :
AlgCombSort11:20: error: '=' expected but identifier found.
def calculecart() Int={
                  ^AlgCombSort11:26: error: illegal start of simple expression
}
^